--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* font-family: "Poppins", sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+/*   font-family: "Open Sans", sans-serif; */
+
+
 * {
   padding: 0;
   margin: 0;
@@ -12,7 +19,7 @@ body {
 .container {
   max-width: 1440px;
   min-height: 100vh;
-  margin: 50px;
+  margin: 50px 100px;
   display: flex;
   flex-direction: column;
 }
@@ -20,12 +27,14 @@ body {
   display: flex;
   gap: 50px;
   margin-top: 50px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .container .content .details h2 {
   font-size: 40px;
   margin-top: 40px;
   line-height: 1.8;
+  font-family: "Poppins", sans-serif;
 }
 .container .content .details p {
   margin-top: 15px;
@@ -40,17 +49,37 @@ body {
   height: 50px;
   border-radius: 50px;
   box-shadow: 3px 3px 5px #0000007a;
+  color: hsl(257, 40%, 49%);
+  font-size: 18px;
+  font-weight: 400;
 }
 .container .content .details button:hover {
   background-color: hsl(300, 69%, 71%);
+  color: #fff;
 }
 .container .social-links {
   width: 200px;
   height: 50px;
   /* background-color: #f00; */
   align-self: flex-end;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
 }
-
+.container .social-links a {}
+.container .social-links svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 10px;
+}
+.container .social-links svg:hover {
+  fill: hsl(300, 69%, 71%);
+  border-color: hsl(300, 69%, 71%);
+}
 /* ===== Footer ===== */
 .attribution { 
   font-size: 11px; 
