--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 .container {
   max-width: 1440px;
   min-height: 100vh;
-  margin: 50px 100px;
+  margin: 50px;
   display: flex;
   flex-direction: column;
 }
